1.修改主题 2.添加标签和分类

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 王根基的博客
 subtitle:
-description:
+description: 忠于自己的感受。
 keywords:
-author: John Doe
-language:
+author: GenJi Wang
+language: zh-Hans
 timezone:
 
 # URL
