修改.travis.yml中的GithubToken

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   # 在项目仪表盘的 Settings -> Environment Variables 中配置
-  github_token: $GITHUB_TOKEN
+  github_token: $Hexo_TOKEN
   # 将 public 目录下的内容推送到 master 分支上（必须）
   local_dir: public
   target-branch: master
