修改.travis.yml中的github name 和github email

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,7 @@ deploy:
   # 将 public 目录下的内容推送到 master 分支上（必须）
   local_dir: public
   target-branch: master
-  fqdn: $CUSTOM_DOMAIN
-  name: $GIT_NAME
-  email: $GIT_EMAIL
+  name: $GITHUB_NAME
+  email: $GITHUB_EMAIL
   on:
     branch: hexo
