调试持续集成3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: node_js
 
-node_js:
-   --lts
+node_js: stable
 
 # 缓存依赖
 #cache:
 #  directories:
 #    - $HOME/.npm
 
-before_install:
-  - export TZ='Asia/Shanghai' # 更改时区
+#before_install:
+#  - export TZ='Asia/Shanghai' # 更改时区
 
 # 依赖安装
 install:
