--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,22 @@ language: node_js
 
 node_js: stable
 
-# 缓存依赖
-#cache:
-#  directories:
-#    - $HOME/.npm
-
-#before_install:
-#  - export TZ='Asia/Shanghai' # 更改时区
+# 缓存，可以节省集成的时间，这里我用了yarn，如果不用可以删除
+cache:
+  apt: true
+  yarn: true
+  directories:
+    - node_modules
+    
+before_install: 
+ # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
+- curl -o- -L https://yarnpkg.com/install.sh | bash
+- export PATH=$HOME/.yarn/bin:$PATH
+- npm install -g hexo-cli
 
 # 依赖安装
 install:
-  - npm install
+  - yarn
 
 # 构建脚本
 script:
@@ -26,17 +31,10 @@ script:
 branches:
   only:
     - hexo # 只对 hexo 分支进行构建
-
-# GitHub Pages 部署
-deploy:
-  provider: pages
-  skip_cleanup: true
-  # 在项目仪表盘的 Settings -> Environment Variables 中配置
-  github_token: $Hexo_TOKEN
-  # 将 public 目录下的内容推送到 master 分支上（必须）
-  local_dir: public
-  target-branch: master
-  name: $GITHUB_NAME
-  email: $GITHUB_EMAIL
-  on:
-    branch: hexo
+after_success:
+- cd ./public
+- git init
+- git add --all .
+- git commit -m "Travis CI Auto Successful"
+# 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
+- git push --quiet --force https://$Hexo_TOKEN@github.com/$GITHUB_NAME/$GITHUB_NAME.github.io.git  master
