--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,37 @@
+# 指定语言环境
 language: node_js
-
-node_js: --lts
-
-# 缓存依赖
+# 指定需要sudo权限
+sudo: required
+# 指定node_js版本
+node_js: stable
+# 指定缓存模块，可选。缓存可加快编译速度。
 cache:
   directories:
-    - $HOME/.npm
+    - node_modules
 
-before_install:
-  - export TZ='Asia/Shanghai' # 更改时区
-
-# 依赖安装
-install:
-  - npm install
-
-# 构建脚本
-script:
-  # 先清除
-  - hexo clean
-    # 生成静态站点文件 使用主题自定义配置（高优先级） + 站点配置
-  - hexo generate --config _config.yml,source/_data/next.yml
-
-# 分支白名单
+# 指定博客源码分支，因人而异。hexo博客源码托管在独立repo则不用设置此项
 branches:
   only:
-    - hexo # 只对 hexo 分支进行构建
+    - hexo 
 
-# GitHub Pages 部署
-deploy:
-  provider: pages
-  skip_cleanup: true
-  # 在项目仪表盘的 Settings -> Environment Variables 中配置
-  github_token: $Hexo_TOKEN
-  # 将 public 目录下的内容推送到 master 分支上（必须）
-  local_dir: public
-  target-branch: master
-  name: $GITHUB_NAME
-  email: $GITHUB_EMAIL
-  on:
-    branch: hexo
+before_install:
+  - npm install -g hexo-cli
+
+# Start: Build Lifecycle
+install:
+  - npm install
+  - npm install hexo-deployer-git --save
+
+# 执行清缓存，生成网页操作
+script:
+  - hexo clean
+  - hexo generate
+
+# 设置git提交名，邮箱；替换真实token到_config.yml文件，最后depoy部署
+after_script:
+  - git config user.name "houzixiashanxiedaima"
+  - git config user.email "houzixiashanxiedaima@foxmail.com"
+  # 替换同目录下的_config.yml文件中gh_token字符串为travis后台刚才配置的变量，注意此处sed命令用了双引号。单引号无效！
+  - sed -i "s/hexo_token/${Hexo_TOKEN}/g" ./_config.yml
+  - hexo deploy
+# End: Build LifeCycle
