--- a/_config.yml
+++ b/_config.yml
@@ -92,5 +92,5 @@ theme: next
 deploy:
 - type: git
   # 下方的gh_token会被.travis.yml中sed命令替换
-  repo: https://hexo_token@github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
+  repo: https://gh_token@github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
   branch: master
