--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,10 @@ after_script:
   - git config user.name "houzixiashanxiedaima"
   - git config user.email "houzixiashanxiedaima@foxmail.com"
   # 替换同目录下的_config.yml文件中gh_token字符串为travis后台刚才配置的变量，注意此处sed命令用了双引号。单引号无效！
-  - sed -i "s/gh_token/${Hexo_TOKEN}/g"  ./_config.yml
+  - sed -i'' "s~https://github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git~https://${Hexo_TOKEN}@github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git~" _config.yml
+script:
+  - hexo g
+  - hexo d
+ 
   - hexo deploy
 # End: Build LifeCycle
