--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,20 @@
-# 指定语言环境
 language: node_js
-# 指定需要sudo权限
-sudo: required
-# 指定node_js版本
 node_js: stable
-# 指定缓存模块，可选。缓存可加快编译速度。
-cache:
-  directories:
-    - node_modules
-
-# 指定博客源码分支，因人而异。hexo博客源码托管在独立repo则不用设置此项
-branches:
-  only:
-    - hexo 
-
-before_install:
-  - npm install -g hexo-cli
-
-# Start: Build Lifecycle
 install:
   - npm install
-  - npm install hexo-deployer-git --save
-
-# 执行清缓存，生成网页操作
-script:
-  - hexo clean
-  - hexo generate
-
-# 设置git提交名，邮箱；替换真实token到_config.yml文件，最后depoy部署
-after_script:
-  - git config user.name "houzixiashanxiedaima"
-  - git config user.email "houzixiashanxiedaima@foxmail.com"
-  # 替换同目录下的_config.yml文件中gh_token字符串为travis后台刚才配置的变量，注意此处sed命令用了双引号。单引号无效！
-  - sed -i'' "s~https://github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git~https://${Hexo_TOKEN}@github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git~" _config.yml
 script:
   - hexo g
-  - hexo d
- 
-  - hexo deploy
-# End: Build LifeCycle
+after_script:
+  - cd ./public
+  - git init 
+  - git config user.name "houzixiashanxiedaima"
+  - git config user.email "houzixiashanxiedaima@foxmail.com"
+  - git add .
+  - git commit -m "Travis CI Successfully"
+  - git push --force --quiet "https://${Hexo_TOKEN}@${GH_REF}" master:master
+branches:
+  only:
+    - hexo
+env:
+ global:
+   - GH_REF: github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
