--- a/_config.yml
+++ b/_config.yml
@@ -85,12 +85,8 @@ theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-#deploy:
-#  type: git
-#  repo: git@github.com:houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
-#  branch: master
 deploy:
-- type: git
-  # 下方的gh_token会被.travis.yml中sed命令替换
-  repo: https://gh_token@github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
+  type: git
+  repo: git@github.com:houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
   branch: master
+
