--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
   - npm install
 script:
   - hexo g
-after_script:
+after_success:
   - cd ./public
   - git init 
   - git config user.name "houzixiashanxiedaima"
