调试集成测试final-final

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,7 @@ branches:
 env:
  global:
    - GH_REF: github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
+   
+cache:
+ directories:  #缓存特定目录, 加快构建速度
+   - node_modules
