同时部署到github和coding

--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
+  github: git@github.com:houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
+  coding: git@git.coding.net:houzixiashanxiedaima/houzixiashanxiedaima.coding.me.git
   branch: master
 
