coding部署添加coding识别文件Staticfile

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,8 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  github: git@github.com:houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
-  coding: git@git.coding.net:houzixiashanxiedaima/houzixiashanxiedaima.coding.me.git
+  repository: 
+    github: git@github.com:houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
+    coding: git@git.coding.net:houzixiashanxiedaima/houzixiashanxiedaima.coding.me.git
   branch: master
 
