--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
   - npm install
 script:
   - hexo clean 
-  - hexo g && gulp
+  - hexo g
 after_success:
   - cd ./public
   - git init 
@@ -12,13 +12,23 @@ after_success:
   - git config user.email "houzixiashanxiedaima@foxmail.com"
   - git add .
   - git commit -m "Travis CI Successfully"
+  # github push 
   - git push --force --quiet "https://${Hexo_TOKEN}@${GH_REF}" master:master
+  # coding push 
+  - git push --force --quiet "https://houzixiashanxiedaima:${Coding_TOKEN}@${CODING_REF}" master:master
+  # tag
+  - git tag v0.0.$TRAVIS_BUILD_NUMBER -a -m "Auto Taged By TravisCI With Build $TRAVIS_BUILD_NUMBER"
+  # Github Pages tag
+  - git push --quiet "https://${Hexo_TOKEN}@${GH_REF}" master:master --tags
+  # Coding Pages tag
+  - git push --quiet "https://houzixiashanxiedaima:${Coding_TOKEN}@${CODING_REF}" master:master --tags
 branches:
   only:
     - hexo
 env:
  global:
    - GH_REF: github.com/houzixiashanxiedaima/houzixiashanxiedaima.github.io.git
+   - CODING_REF: git.coding.net/houzixiashanxiedaima/houzixiashanxiedaima.coding.me.git
    
 cache:
  directories:  #缓存特定目录, 加快构建速度
