--- a/package.json
+++ b/package.json
@@ -6,11 +6,6 @@
     "version": "3.7.1"
   },
   "dependencies": {
-    "gulp-htmlclean": "^2.7.22",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^3.0.1",
     "hexo": "^3.7.1",
     "hexo-asset-image": "0.0.3",
     "hexo-deployer-git": "^0.3.1",
@@ -30,5 +25,14 @@
     "server": "hexo server --config config",
     "clean": "hexo clean --config config",
     "theme": "git clone https://github.com/theme-next/hexo-theme-next themes/next && git clone https://github.com/theme-next/theme-next-fancybox3 themes/next/source/lib/fancybox"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.1"
   }
 }
