update next from 5.x to 6.x

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description: 忠于自己的感受。
 keywords:
 author: GenJi Wang
-language: zh-Hans
+language: zh-CN
 timezone:
 
 # URL
@@ -81,7 +81,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
-theme: next
+theme: next-reload
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
