update Next theme

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 王根基的博客
 subtitle:
-description: 忠于自己的感受。
+description: 雅俗共赏。
 keywords:
 author: GenJi Wang
 language: zh-CN
@@ -81,7 +81,8 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
-theme: next
+#theme: next
+theme: next-reloaded
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
