--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "4.2.0"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
+    "hexo": "^4.2.0",
     "hexo-asset-image": "1.0.0",
-    "hexo-deployer-git": "^2.0.0",
+    "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-search": "^2.4.0",
-    "hexo-generator-searchdb": "^1.1.0",
+    "hexo-generator-searchdb": "^1.2.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-related-popular-posts": "^3.0.6",
+    "hexo-related-popular-posts": "^4.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "npm-upgrade": "^2.0.2"
   },
   "scripts": {
     "config": "_config.yml,source/_data/next.yml",
@@ -32,7 +33,7 @@
     "gulp": "^4.0.2",
     "gulp-htmlclean": "^2.7.22",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.1.1",
+    "gulp-imagemin": "^6.2.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.2"
   }
